# Fp-homework

./: input.sh  stack.yaml
hw0/: hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3Civil.hs  Block3Nat.hs  Block3Tree.hs  Block3Week.hs  Block4.hs  Block5.hs
hw2/: hw2.cabal
hw2/src/: Block2Monads.hs  FishToJoin.hs  Hw2Block1.hs  Hw2Block2.hs  Hw2Block3.hs  MonadToJoin.hs
hw2/test/: Spec.hs  TestArrays.hs  TestBaseParsers.hs  TestEval.hs  TestMoving.hs  TestSimpleParsers.hs  TestStringSum.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs  Parser.hs  Runner.hs
hw4/: hw4.cabal
